--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -3,6 +3,10 @@
 	margin-right: 5px;
 	margin-top: 5px;
 }
+.remove-comment {
+	margin-right: 5px;
+	margin-top: 5px;
+}
 .comment-button{
 	margin-right: 5px;
 	margin-bottom: 5px;
